--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
 </head>
 
 <body>
-<table cellspacing="20" >
-  <tr>
-    <td>  <img src="imges/circle-cropped.png" alt="profile imge"> </td>
-    <td> <h1>Zainab Alkhalaf</h1>
-    <p><i>Software Developer </i> </p>
-    <p>Bachelor in computer science with a second honor degree.
-      Trained at Al-Jaber Hospital for EYE & ENT as a software developer and as an Office Assistant.<br>
-      Recently, attending courses supported by the Ministry of Communication and Information Technology.
-      Looking forward for improving myself.<br>
-      Seeking for opportunities that could enhance my technical & academic knowledge in order to achieve business required goals.
-    </p></td>
-  </tr>
-</table>
+  <table cellspacing="20">
+    <tr>
+      <td> <img src="circle-cropped.png" alt="profile imge"> </td>
+      <td>
+        <h1>Zainab Alkhalaf</h1>
+        <p><i>Software Developer </i> </p>
+        <p>Bachelor in computer science with a second honor degree.
+          Trained at Al-Jaber Hospital for EYE & ENT as a software developer and as an Office Assistant.<br>
+          Recently, attending courses supported by the Ministry of Communication and Information Technology.
+          Looking forward for improving myself.<br>
+          Seeking for opportunities that could enhance my technical & academic knowledge in order to achieve business required goals.
+        </p>
+      </td>
+    </tr>
+  </table>
 
 
   <hr>
@@ -38,7 +40,7 @@
   </ul>
   <hr>
   <h3>Experience</h3>
-  <table border="1">
+  <table cellspacing="20">
     <thead>
       <tr>
         <th>Date</th>
@@ -48,38 +50,36 @@
     <tbody>
       <tr>
         <td>07-2017 to 09-2017</td>
-        <td>Software developer at Al-Jaber Hospital for Eye & ENT.  </td>
+        <td>Software developer at Al-Jaber Hospital for Eye & ENT. </td>
       </tr>
       <tr>
-        <td>   </td>
-        <td><ul>
-          <li>
-            Developed two software programs for the hospital that serve the kitchen department & Operation department.
-          </li>
-          <li>Worked as an office assistant in nursing-office & Medical secretary.</li>
-        </ul></td>
+        <td> </td>
+        <td>
+          Developed two software programs for the hospital that serve the kitchen department & Operation department.<br>
+          Worked as an office assistant in nursing-office & Medical secretary.
+        </td>
       </tr>
     </tbody>
   </table>
-<hr>
-<h3>Skills</h3>
-<table cellspacing="10">
-<tr>
-  <td>Java</td>
-  <td> ⭐️ ⭐️ ⭐️ ⭐️ </td>
-  <td>Html</td>
-  <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
-</tr>
-<tr>
-<td>Css</td>
-<td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
-<td>Microsoft office</td>
-<td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
-</tr>
-<tr>
-  <td></td>
-</tr>
-</table>
+  <hr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Java</td>
+      <td> ⭐️ ⭐️ ⭐️ ⭐️ </td>
+      <td>Html</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+    </tr>
+    <tr>
+      <td>Css</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+      <td>Microsoft office</td>
+      <td>⭐️ ⭐️ ⭐️ ⭐️ ⭐️</td>
+    </tr>
+    <tr>
+      <td></td>
+    </tr>
+  </table>
   <hr>
   <a href="Contacts.html">Contact Me</a>
 </body>
